fixed navbar alignment

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,7 @@
   height: 6vh;
   position: sticky;
   bottom: 0;
+  z-index: 10;
 }
 
 .navbar-lewagon .navbar-collapse {
